--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,18 @@
 	<groupId>example.excel</groupId>
 	<artifactId>excel-maven</artifactId>
 	<version>1.0-SNAPSHOT</version>
+	<dependencies>
+		<dependency>
+			<groupId>org.apache.poi</groupId>
+			<artifactId>poi-ooxml</artifactId>
+			<version>3.8-beta4</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.poi</groupId>
+			<artifactId>poi-ooxml</artifactId>
+			<version>3.8-beta4</version>
+		</dependency>
 
+	</dependencies>
 
 </project>
